--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/img/favicon.jpg" type="image/x-icon">
 
         <!--=============== BOXICONS ===============-->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="./assets/css/styles.css">
 
-        <title>  portfolio  </title>
+        <title>  Ratnamani  </title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
@@ -469,7 +469,7 @@
 
                 <div class="work__container container grid">
                     <div class="work__card mix movil">
-                        <img src="./assets/img/work1.jpg" alt="" class="work__img">
+                        <a href="https://github.com/RatnamaniTholeti/ATM-Database-connecticity"><img src="./assets/img/work1.jpg" alt="" class="work__img"></a>
 
                         <h3 class="work__title">ATM with Backend connectivity</h3>
 
@@ -478,37 +478,37 @@
                         </a>
                     </div>
 
-                    <!-- <div class="work__card mix movil">
-                        <img src="./assets/img/work2.jpg" alt="" class="work__img">
-
-                        <h3 class="work__title">Work 2</h3>
-
-                        <a href="" class="work__button">
-                            Demo <i class='bx bx-right-arrow-alt work__icon'></i>
-                        </a>
-                    </div>
-
-                    <div class="work__card mix design">
-                        <img src="./assets/img/work3.jpg" alt="" class="work__img">
-
-                        <h3 class="work__title">Work 3</h3>
-
-                        <a href="" class="work__button">
-                            Demo <i class='bx bx-right-arrow-alt work__icon'></i>
-                        </a>
-                    </div>
-
                     <div class="work__card mix web">
-                        <img src="./assets/img/work4.jpg" alt="" class="work__img">
+                        <a href="https://ratnamanitholeti.github.io/Stopwatch-/"><img src="./assets/img/work2.jpg" alt="" class="work__img"></a>
 
-                        <h3 class="work__title">Work 4</h3>
+                        <h3 class="work__title">Stop Watch</h3>
 
-                        <a href="" class="work__button">
-                            Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                        <a href="https://ratnamanitholeti.github.io/Stopwatch-/" class="work__button">
+                            Website <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
 
-                    <div class="work__card mix movil">
+                    <div class="work__card mix web"> 
+                        <a href="https://ratnamanitholeti.github.io/TIC-TAC-TOE/"><img src="./assets/img/work3.jpg" alt="" class="work__img"></a>
+
+                        <h3 class="work__title">Tic tac toe game</h3>
+
+                        <a href="https://ratnamanitholeti.github.io/TIC-TAC-TOE/" class="work__button">
+                            Website <i class='bx bx-right-arrow-alt work__icon'></i>
+                        </a>
+                    </div> 
+
+                     <div class="work__card mix web">
+                       <a href="https://ratnamanitholeti.github.io/Movingeyes-Doremon/"><img src="./assets/img/work4.jpg" alt="" class="work__img"></a> 
+
+                        <h3 class="work__title">Movement of eyes</h3>
+
+                        <a href="https://ratnamanitholeti.github.io/Movingeyes-Doremon/" class="work__button">
+                            Website <i class='bx bx-right-arrow-alt work__icon'></i>
+                        </a>
+                    </div>
+
+                    <!-- <div class="work__card mix movil">
                         <img src="./assets/img/work5.jpg" alt="" class="work__img">
 
                         <h3 class="work__title">Work 5</h3>
