--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
 
                         <p class="about__description">
-                            Logical and organised individual with a strong foundation in software engineering. Proficient in C, Python and Java.  Ability to translate business requirements into innovative software solutions. Excellent teamwork, interpersonal and communication skills. Looking to start a career as an entry-level professional with a reputed IT company.
+                            Logical and organised individual with a strong foundation in software engineering. Proficient in C, Python and Java. Excellent teamwork, interpersonal and communication skills.Dedicated and highly skilled Computer Science enthusiast with a strong proficiency in front-end development. Seeking opportunities to apply my technical expertise and creative problem-solving skills to contribute to dynamic projects and teams. Looking to start a career as an entry-level professional with a reputed IT company.
                         </p>
 
                         <a href="#contact" class="button">
