--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <div class="about__box">
                                 <i class='bx bx-briefcase-alt about__icon' ></i>
                                 <h3 class="about__title">Completed</h3>
-                                <span class="about__subtitle">1 Project</span>
+                                <span class="about__subtitle">5 Projects</span>
                             </div>
 
                             <div class="about__box">
