--- a/index.html
+++ b/index.html
@@ -508,15 +508,15 @@
                         </a>
                     </div>
 
-                    <!-- <div class="work__card mix movil">
-                        <img src="./assets/img/work5.jpg" alt="" class="work__img">
+                    <div class="work__card mix web">
+                    <a href="https://ratnamanitholeti.github.io/Flipkart_Clone/"><img src="./assets/img/work5.jpg" alt="" class="work__img"></a>
 
-                        <h3 class="work__title">Work 5</h3>
+                        <h3 class="work__title">Flipkart Clone</h3>
 
                         <a href="" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
-                    </div> -->
+                    </div>
                 </div>
             </section>
 
