--- a/index.html
+++ b/index.html
@@ -509,11 +509,11 @@
                     </div>
 
                     <div class="work__card mix web">
-                    <a href="https://ratnamanitholeti.github.io/Flipkart_Clone/"><img src="./assets/img/work5.jpg" alt="" class="work__img"></a>
+                    <a href="https://ratnamanitholeti.github.io/Flipkart_Clone/"><img src="./assets/img/work5.jfif" alt="" class="work__img"></a>
 
                         <h3 class="work__title">Flipkart Clone</h3>
 
-                        <a href="" class="work__button">
+                        <a href="https://ratnamanitholeti.github.io/Flipkart_Clone/" class="work__button">
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
