--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                     </div>
 
                     <div class="work__card mix web">
-                    <a href="https://ratnamanitholeti.github.io/Flipkart_Clone/"><img src="./assets/img/work5.jfif" alt="" class="work__img"></a>
+                    <a href="https://ratnamanitholeti.github.io/Flipkart_Clone/"><img src="./assets/img/work5.png" alt="" class="work__img"></a>
 
                         <h3 class="work__title">Flipkart Clone</h3>
 
