--- a/index.html
+++ b/index.html
@@ -517,6 +517,15 @@
                             Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                         </a>
                     </div>
+                  <div class="work__card mix web">
+                    <a href="https://ratnamanitholeti.github.io/Amazon_Clone/"><img src="./assets/img/Work6.png" alt="" class="work__img"></a>
+
+                        <h3 class="work__title">Amazon Clone</h3>
+
+                        <a href="https://ratnamanitholeti.github.io/Amazon_Clone/" class="work__button">
+                            Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                        </a>
+                    </div>
                 </div>
             </section>
 
