--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         </a>
                     </div>
                   <div class="work__card mix web">
-                    <a href="https://ratnamanitholeti.github.io/Amazon_Clone/"><img src="./assets/img/Work6.png" alt="" class="work__img"></a>
+                    <a href="https://ratnamanitholeti.github.io/Amazon_Clone/"><img src="./assets/img/Work6.jpg" alt="" class="work__img"></a>
 
                         <h3 class="work__title">Amazon Clone</h3>
 
