--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="home__handle">
-                    <img src="./assets/img/22.png" alt="" class="home__img">
+                    <img src="./assets/img/photo1.jpg" alt="" class="home__img">
                 </div>
 
                 <div class="home__social">
