added updated resume details

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h3 class="home__education">Welcome to my official portfolio website</h3>
 
                     <div class="home__buttons">
-                        <a download="" href="./assets/pdf/Ratna-Single-Page.pdf" class="button button--ghost">
+                        <a download="" href="./assets/pdf/THOLETI   RATNAMANI.pdf" class="button button--ghost">
                             Download CV
                         </a>
                         <a href="#about" class="button">About me</a>
@@ -116,7 +116,7 @@
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">Fresher</span>
+                            <span class="about__subtitle">1+ year</span>
                         </div>
 
                         <div class="about__box">
@@ -133,12 +133,13 @@
                     </div>
 
                     <p class="about__description">
-                        Logical and organised individual with a strong foundation in software engineering. Proficient in
-                        C, Python and Java. Excellent teamwork, interpersonal and communication skills.Dedicated and
-                        highly skilled Computer Science enthusiast with a strong proficiency in front-end development.
-                        Seeking opportunities to apply my technical expertise and creative problem-solving skills to
-                        contribute to dynamic projects and teams. Looking to start a career as an entry-level
-                        professional with a reputed IT company.
+                        Results-driven Software Engineer currently working at AURM, Bengaluru, as a Full Stack
+                        Developer. Hands-on experience building scalable, production-ready applications using the MERN
+                        stack. Experienced in developing microservices with Node.js and Moleculer, implementing secure
+                        authentication (TOTP, Supertokens), and integrating payments, notifications, and search systems.
+                        Proficient in JavaScript, Python, Java, and C, with working knowledge of AWS deployments and
+                        modern web technologies. Known for strong problem-solving ability, clean code practices, and
+                        effective collaboration in agile product teams to deliver reliable, user-centric solutions.
                     </p>
 
                     <a href="#contact" class="button">
@@ -155,42 +156,55 @@
 
             <div class="skills__container container grid">
                 <div class="skills__content">
-                    <h3 class="skills__title">Certifications</h3>
+                    <h3 class="skills__title">Skills</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
-
                                 <div>
-                                    <h3 class="skills__name">HTML</h3>
+                                    <h3 class="skills__name">JavaScript</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
 
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
-
                                 <div>
-                                    <h3 class="skills__name">CSS</h3>
+                                    <h3 class="skills__name">React.js</h3>
+                                    <span class="skills__level">Advanced</span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+                                <div>
+                                    <h3 class="skills__name">Node.js</h3>
+                                    <span class="skills__level">Advanced</span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+                                <div>
+                                    <h3 class="skills__name">MongoDB</h3>
+                                    <span class="skills__level">Advanced</span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+                                <div>
+                                    <h3 class="skills__name">Moleculer.js</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
 
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
-
                                 <div>
-                                    <h3 class="skills__name">Networking</h3>
+                                    <h3 class="skills__name">AWS</h3>
                                     <span class="skills__level">Intermediate</span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
-
-                                <div>
-                                    <h3 class="skills__name">Cyber Security</h3>
-                                    <span class="skills__level">Fundamental</span>
                                 </div>
                             </div>
                         </div>
@@ -198,7 +212,6 @@
                         <div class="skills__group">
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
-
                                 <div>
                                     <h3 class="skills__name">Java</h3>
                                     <span class="skills__level">Advanced</span>
@@ -207,7 +220,14 @@
 
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
+                                <div>
+                                    <h3 class="skills__name">Python</h3>
+                                    <span class="skills__level">Intermediate</span>
+                                </div>
+                            </div>
 
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
                                 <div>
                                     <h3 class="skills__name">C</h3>
                                     <span class="skills__level">Intermediate</span>
@@ -216,10 +236,25 @@
 
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
-
                                 <div>
-                                    <h3 class="skills__name">Python</h3>
+                                    <h3 class="skills__name">HTML</h3>
+                                    <span class="skills__level">Advanced</span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+                                <div>
+                                    <h3 class="skills__name">CSS</h3>
                                     <span class="skills__level">Intermediate</span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+                                <div>
+                                    <h3 class="skills__name">Cybersecurity</h3>
+                                    <span class="skills__level">Fundamental</span>
                                 </div>
                             </div>
                         </div>
@@ -227,58 +262,39 @@
                 </div>
 
                 <div class="skills__content">
-                    <h3 class="skills__title">Internships</h3>
+                    <h3 class="skills__title">Experience</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
 
-                                <div>
-                                    <h3 class="skills__name">SKILLDZIRE CYBER SECURITY LONG TERM INTERNSHIP</h3>
-                                    <span class="skills__level">APSCHE</span>
-                                </div>
-                            </div>
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
                                 <div>
-                                    <h3 class="skills__name">ZERO TRUST CLOUD SECURITY VIRTUAL INTERNSHIP</h3>
-                                    <span class="skills__level">AICTE</span>
+                                    <h3 class="skills__name">AURM — Junior Software Engineer</h3>
+                                    <span class="skills__level">Jan 2026 – Present | Bengaluru</span>
                                 </div>
                             </div>
+
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
                                 <div>
-                                    <h3 class="skills__name">CISCO INTERNSHIP PROGRAM IN CYBER SECURITY </h3>
-                                    <span class="skills__level">AICTE</span>
+                                    <h3 class="skills__name">AURM — Technology Intern</h3>
+                                    <span class="skills__level">Jan 2026 – Present | Bengaluru</span>
                                 </div>
                             </div>
+
                         </div>
+
                         <div class="skills__group">
+
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
-
                                 <div>
-                                    <h3 class="skills__name">IBM SKILLSBUILD FRONT END DEVELOPMENT</h3>
-                                    <span class="skills__level">APSCHE</span>
+                                    <h3 class="skills__name">Train-A-Tech — Associate Trainee</h3>
+                                    <span class="skills__level">Aug 2023 – Oct 2023 | Hyderabad</span>
                                 </div>
                             </div>
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
 
-                                <div>
-                                    <h3 class="skills__name">PALALTO CYBER SECURITY VIRTUAL INTERNSHIP</h3>
-                                    <span class="skills__level">AICTE</span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
-
-                                <div>
-                                    <h3 class="skills__name">AWS CLOUD VIRTUAL INTERNSHIP</h3>
-                                    <span class="skills__level">AICTE</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -472,18 +488,51 @@
             <div class="work__filters">
                 <span class="work__item active-work" data-filter='all'>All</span>
                 <span class="work__item" data-filter='.web'>Web</span>
-                <span class="work__item" data-filter='.movil'>Java</span>
-                <span class="work__item" data-filter='.design'>Design</span>
+                <span class="work__item" data-filter='.java'>Java</span>
+                <span class="work__item" data-filter='.stack'>Full Stack</span>
             </div>
 
             <div class="work__container container grid">
-                <div class="work__card mix movil">
+                <!-- <div class="work__card mix movil">
                     <a href="https://github.com/RatnamaniTholeti/ATM-Database-connecticity"><img
                             src="./assets/img/work1.jpg" alt="" class="work__img"></a>
 
                     <h3 class="work__title">ATM with Backend connectivity</h3>
 
                     <a href="https://github.com/RatnamaniTholeti/ATM-Database-connecticity" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div> -->
+
+                  <div class="work__card mix stack">
+                    <a href="https://intern-hub-rouge.vercel.app/"><img
+                            src="./assets/img/internhub.jpg" alt="" class="work__img"></a>
+
+                    <h3 class="work__title">INTERNHUB</h3>
+
+                    <a href="https://intern-hub-rouge.vercel.app/" class="work__button">
+                        Website <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix stack">
+                    <a href="/"><img
+                            src="./assets/img/vsdash.jp" alt="" class="work__img"></a>
+
+                    <h3 class="work__title">VISUALIZATION DASHBOARD</h3>
+
+                    <a href="/" class="work__button">
+                        Website <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix java">
+                    <a href="https://drive.google.com/file/d/1V_5RcLXYJJ66qKTY6F20sZdKLE6IqwRZ/view?usp=sharing"><img
+                            src="./assets/img/dsas.png" alt="" class="work__img"></a>
+
+                    <h3 class="work__title">DSAS: Data Sharing & Authorized SearchableFramework for E-HealthcareSystem</h3>
+
+                    <a href="https://drive.google.com/file/d/1V_5RcLXYJJ66qKTY6F20sZdKLE6IqwRZ/view?usp=sharing" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
