--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
                             <h3 class="about__title">Completed</h3>
-                            <span class="about__subtitle">6 Projects</span>
+                            <span class="about__subtitle">6 + Projects</span>
                         </div>
 
                         <div class="about__box">
@@ -516,12 +516,12 @@
                 </div>
 
                 <div class="work__card mix stack">
-                    <a href="/"><img
+                    <a href="https://visualization-dashboard-beryl.vercel.app/"><img
                             src="./assets/img/vsdash.jp" alt="" class="work__img"></a>
 
                     <h3 class="work__title">VISUALIZATION DASHBOARD</h3>
 
-                    <a href="/" class="work__button">
+                    <a href="https://visualization-dashboard-beryl.vercel.app/" class="work__button">
                         Website <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -530,7 +530,7 @@
                     <a href="https://drive.google.com/file/d/1V_5RcLXYJJ66qKTY6F20sZdKLE6IqwRZ/view?usp=sharing"><img
                             src="./assets/img/dsas.png" alt="" class="work__img"></a>
 
-                    <h3 class="work__title">DSAS: Data Sharing & Authorized SearchableFramework for E-HealthcareSystem</h3>
+                    <h3 class="work__title">DSAS</h3>
 
                     <a href="https://drive.google.com/file/d/1V_5RcLXYJJ66qKTY6F20sZdKLE6IqwRZ/view?usp=sharing" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
