--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 <i class='bx bxs-badge-check'></i>
                                 <div>
                                     <h3 class="skills__name">AURM — Technology Intern</h3>
-                                    <span class="skills__level">Jan 2026 – Present | Bengaluru</span>
+                                    <span class="skills__level">Jan 2025 – Dec 2025 | Bengaluru</span>
                                 </div>
                             </div>
 
